deploy/projetweb-WP-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  namespace: projetweb
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
