deploy/projetweb-WP-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: projetweb
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
