deploy/projetweb-WP-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: projetweb
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /   
spec:
  ingressClassName: nginx 
  rules:
    - host: projetweb.maysadevops.dns-dynamic.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
